@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>cryptomator</artifactId>
-	<version>1.9.0-SNAPSHOT</version>
+	<version>1.10.0-SNAPSHOT</version>
 	<name>Cryptomator Desktop App</name>
 
 	<organization>
@@ -26,21 +26,21 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.jdk.version>19</project.jdk.version>
+		<project.jdk.version>20</project.jdk.version>
 
 		<!-- Group IDs of jars that need to stay on the class path for now -->
 		<!-- Once hypfvieh, swiesend, purejava and integrations-linux have module-info, remove them-->
 		<nonModularGroupIds>org.ow2.asm,org.apache.jackrabbit,org.apache.httpcomponents,de.swiesend,org.purejava,com.github.hypfvieh</nonModularGroupIds>
 
 		<!-- cryptomator dependencies -->
-		<cryptomator.cryptofs.version>2.6.2</cryptomator.cryptofs.version>
+		<cryptomator.cryptofs.version>2.6.4</cryptomator.cryptofs.version>
 		<cryptomator.integrations.version>1.2.0</cryptomator.integrations.version>
 		<cryptomator.integrations.win.version>1.2.0</cryptomator.integrations.win.version>
 		<cryptomator.integrations.mac.version>1.2.0</cryptomator.integrations.mac.version>
-		<cryptomator.integrations.linux.version>1.2.0</cryptomator.integrations.linux.version>
-		<cryptomator.fuse.version>2.0.5</cryptomator.fuse.version>
+		<cryptomator.integrations.linux.version>1.2.1</cryptomator.integrations.linux.version>
+		<cryptomator.fuse.version>3.0.0</cryptomator.fuse.version>
 		<cryptomator.dokany.version>2.0.0</cryptomator.dokany.version>
-		<cryptomator.webdav.version>2.0.2</cryptomator.webdav.version>
+		<cryptomator.webdav.version>2.0.3</cryptomator.webdav.version>
 
 		<!-- 3rd party dependencies -->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
@@ -48,23 +48,23 @@
 		<easybind.version>2.2</easybind.version>
 		<guava.version>31.1-jre</guava.version>
 		<gson.version>2.10.1</gson.version>
-		<javafx.version>19.0.2.1</javafx.version>
-		<jwt.version>4.3.0</jwt.version>
+		<javafx.version>20.0.1</javafx.version>
+		<jwt.version>4.4.0</jwt.version>
 		<nimbus-jose.version>9.31</nimbus-jose.version>
-		<logback.version>1.4.5</logback.version>
-		<slf4j.version>2.0.6</slf4j.version>
+		<logback.version>1.4.7</logback.version>
+		<slf4j.version>2.0.7</slf4j.version>
 		<tinyoauth2.version>0.5.1</tinyoauth2.version>
 		<zxcvbn.version>1.7.0</zxcvbn.version>
 
 		<!-- test dependencies -->
-		<junit.jupiter.version>5.9.2</junit.jupiter.version>
-		<mockito.version>5.1.1</mockito.version>
+		<junit.jupiter.version>5.9.3</junit.jupiter.version>
+		<mockito.version>5.3.1</mockito.version>
 		<hamcrest.version>2.2</hamcrest.version>
 
 		<!-- build-time dependencies -->
 		<jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
 		<dependency-check.version>8.1.0</dependency-check.version>
-		<jacoco.version>0.8.8</jacoco.version>
+		<jacoco.version>0.8.9</jacoco.version>
 	</properties>
 
 	<dependencies>
@@ -332,6 +332,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
